--- a/1+1.html
+++ b/1+1.html
@@ -33,6 +33,6 @@
          </ul>
       </section>
       <h3 class="about__title"><a class="link-to-movie" href="https://www.kinopoisk.ru/film/535341/" target="_blank">Link to movie</a> </h3>
-      <h3 class="about__title"><a class="link-to-movie" href="Films.html">Back</a></h3>
+      <h3 class="about__title"><a class="link-to-movie" href="index.html">Back</a></h3>
    </body>
 </html>
